# python-poetry-docker-template

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
scripts/: test.py
{{ cookiecutter.project_slug }}/: docker-compose.override.yml  docker-compose.yml
{{ cookiecutter.project_slug }}/{{ cookiecutter.main_directory }}/: Dockerfile  pyproject.toml
{{ cookiecutter.project_slug }}/{{ cookiecutter.main_directory }}/dev/: Dockerfile.black
