[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = "Python project template with poetry with Docker container and dev tools."
authors = ["michal bargiel <michal5bargiel@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
cookiecutter = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
